[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-file-browser"
dynamic = ["version"]
description = "Interactive file system navigation and selection UI components for FastHTML applications with extensible provider support."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['python-fasthtml', 'cjm-fasthtml-app-core>=0.0.17', 'cjm_fasthtml_daisyui', 'cjm_fasthtml_lucide_icons', 'cjm_fasthtml_tailwind>=0.0.44', 'cjm_file_discovery', 'cjm_fasthtml_virtual_collection', 'cjm-fasthtml-keyboard-navigation>=0.0.23', 'cjm_fasthtml_design_system>=0.0.8']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-file-browser"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-file-browser"

[project.entry-points.nbdev]
cjm_fasthtml_file_browser = "cjm_fasthtml_file_browser._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_file_browser.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_file_browser*"]

[tool.nbdev]
